# chess-crawl

./: .coverage  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
proj/: phase-1-report.md  phase-2-report.md  phase-3-report.md  plan.md
proj/tests/: audit.md
src/chess_crawl/: __init__.py  __main__.py  cli.py  config.py  ingest.py
src/chess_crawl/export/: __init__.py  writers.py
src/chess_crawl/jobs/: __init__.py  discovery.py  models.py  runner.py  store.py
src/chess_crawl/normalize/: __init__.py  codes.py  games.py  users.py
src/chess_crawl/providers/: __init__.py  base.py  http.py  registry.py
src/chess_crawl/providers/chesscom/: __init__.py  client.py  endpoints.py  parser.py
src/chess_crawl/providers/lichess/: __init__.py  client.py  endpoints.py  parser.py
src/chess_crawl/reports/: __init__.py  queries.py
src/chess_crawl/storage/: __init__.py  db.py  migrations.py  raw.py  repository.py  schema.sql
tests/: conftest.py  test_cli.py  test_cli_phase3.py  test_cli_workflows.py  test_config_and_codes.py  test_phase2_providers.py  test_phase3_jobs.py  test_phase3_reports_exports.py  test_provider_registry.py  test_smoke.py  test_storage_foundation.py
tests/fixtures/chesscom/: archive_2024_01.json  archives.json  player.json  stats.json
tests/fixtures/lichess/: game.json  games.ndjson  user.json
