[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-crawl"
version = "0.1.0"
description = "Provider-neutral, raw-first local chess data archive"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27,<1.0"]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
chess-crawl = "chess_crawl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
